Rapid Prd/src/objects/Offer__c.object
<CustomObject>
    <description>Individual quotes and contracts from our Broker Out Opportunities</description>
    <fields>
        <fullName>BOOP__c</fullName>
        <description>Related Broker Out Op</description>
        <label>Broker Out Op</label>
        <referenceTo>BOOP__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Fees__c</fullName>
        <label>Contract Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Payback_Amount__c</fullName>
        <label>Contract Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Payment_Amount__c</fullName>
        <label>Contract Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Payment_Interval__c</fullName>
        <label>Contract Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Interval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Received_Time__c</fullName>
        <label>Contract Received Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Requested__c</fullName>
        <label>Contract Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Upsell__c</fullName>
        <label>Contract Upsell</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Number_of_Payments__c</fullName>
        <label>Contracted Number of Payments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funded_Amount__c</fullName>
        <label>Funded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Upsell__c</fullName>
        <label>Max Upsell</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Company</label>
        <referenceTo>Lost_Boy__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Fees__c</fullName>
        <label>Quote Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Number_of_Payments__c</fullName>
        <label>Quote Number of Payments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Payback_Amount__c</fullName>
        <label>Quote Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Amount__c</fullName>
        <label>Quote Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Interval__c</fullName>
        <label>Quote Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Interval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Term__c</fullName>
        <label>Quote Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Notes__c</fullName>
        <label>Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sold_Short__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold Short</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stips__c</fullName>
        <label>Stips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>